sdk-docs_versioned_docs/version-26.1.x/enums/Generated/Types/AssetTx/AssetTx.md
---
id: "AssetTx"
title: "Enumeration: AssetTx"
sidebar_label: "AssetTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).AssetTx

## Enumeration Members

### AcceptAssetOwnershipTransfer

• **AcceptAssetOwnershipTransfer** = ``"asset.acceptAssetOwnershipTransfer"``

#### Defined in

[generated/types.ts:526](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L526)

___

### AcceptTickerTransfer

• **AcceptTickerTransfer** = ``"asset.acceptTickerTransfer"``

#### Defined in

[generated/types.ts:525](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L525)

___

### AddDocuments

• **AddDocuments** = ``"asset.addDocuments"``

#### Defined in

[generated/types.ts:534](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L534)

___

### AddMandatoryMediators

• **AddMandatoryMediators** = ``"asset.addMandatoryMediators"``

#### Defined in

[generated/types.ts:556](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L556)

___

### ClaimClassicTicker

• **ClaimClassicTicker** = ``"asset.claimClassicTicker"``

#### Defined in

[generated/types.ts:538](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L538)

___

### ControllerTransfer

• **ControllerTransfer** = ``"asset.controllerTransfer"``

#### Defined in

[generated/types.ts:540](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L540)

___

### CreateAsset

• **CreateAsset** = ``"asset.createAsset"``

#### Defined in

[generated/types.ts:527](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L527)

___

### CreateAssetWithCustomType

• **CreateAssetWithCustomType** = ``"asset.createAssetWithCustomType"``

#### Defined in

[generated/types.ts:542](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L542)

___

### ExemptAssetAffirmation

• **ExemptAssetAffirmation** = ``"asset.exemptAssetAffirmation"``

#### Defined in

[generated/types.ts:559](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L559)

___

### ExemptTickerAffirmation

• **ExemptTickerAffirmation** = ``"asset.exemptTickerAffirmation"``

#### Defined in

[generated/types.ts:552](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L552)

___

### Freeze

• **Freeze** = ``"asset.freeze"``

#### Defined in

[generated/types.ts:528](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L528)

___

### Issue

• **Issue** = ``"asset.issue"``

#### Defined in

[generated/types.ts:531](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L531)

___

### LinkTickerToAssetId

• **LinkTickerToAssetId** = ``"asset.linkTickerToAssetId"``

#### Defined in

[generated/types.ts:563](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L563)

___

### MakeDivisible

• **MakeDivisible** = ``"asset.makeDivisible"``

#### Defined in

[generated/types.ts:533](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L533)

___

### PreApproveAsset

• **PreApproveAsset** = ``"asset.preApproveAsset"``

#### Defined in

[generated/types.ts:561](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L561)

___

### PreApproveTicker

• **PreApproveTicker** = ``"asset.preApproveTicker"``

#### Defined in

[generated/types.ts:554](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L554)

___

### Redeem

• **Redeem** = ``"asset.redeem"``

#### Defined in

[generated/types.ts:532](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L532)

___

### RedeemFromPortfolio

• **RedeemFromPortfolio** = ``"asset.redeemFromPortfolio"``

#### Defined in

[generated/types.ts:548](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L548)

___

### RegisterAndSetLocalAssetMetadata

• **RegisterAndSetLocalAssetMetadata** = ``"asset.registerAndSetLocalAssetMetadata"``

#### Defined in

[generated/types.ts:545](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L545)

___

### RegisterAssetMetadataGlobalType

• **RegisterAssetMetadataGlobalType** = ``"asset.registerAssetMetadataGlobalType"``

#### Defined in

[generated/types.ts:547](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L547)

___

### RegisterAssetMetadataLocalType

• **RegisterAssetMetadataLocalType** = ``"asset.registerAssetMetadataLocalType"``

#### Defined in

[generated/types.ts:546](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L546)

___

### RegisterCustomAssetType

• **RegisterCustomAssetType** = ``"asset.registerCustomAssetType"``

#### Defined in

[generated/types.ts:541](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L541)

___

### RegisterTicker

• **RegisterTicker** = ``"asset.registerTicker"``

#### Defined in

[generated/types.ts:524](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L524)

___

### RegisterUniqueTicker

• **RegisterUniqueTicker** = ``"asset.registerUniqueTicker"``

#### Defined in

[generated/types.ts:558](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L558)

___

### RemoveAssetAffirmationExemption

• **RemoveAssetAffirmationExemption** = ``"asset.removeAssetAffirmationExemption"``

#### Defined in

[generated/types.ts:560](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L560)

___

### RemoveAssetPreApproval

• **RemoveAssetPreApproval** = ``"asset.removeAssetPreApproval"``

#### Defined in

[generated/types.ts:562](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L562)

___

### RemoveDocuments

• **RemoveDocuments** = ``"asset.removeDocuments"``

#### Defined in

[generated/types.ts:535](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L535)

___

### RemoveLocalMetadataKey

• **RemoveLocalMetadataKey** = ``"asset.removeLocalMetadataKey"``

#### Defined in

[generated/types.ts:550](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L550)

___

### RemoveMandatoryMediators

• **RemoveMandatoryMediators** = ``"asset.removeMandatoryMediators"``

#### Defined in

[generated/types.ts:557](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L557)

___

### RemoveMetadataValue

• **RemoveMetadataValue** = ``"asset.removeMetadataValue"``

#### Defined in

[generated/types.ts:551](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L551)

___

### RemoveTickerAffirmationExemption

• **RemoveTickerAffirmationExemption** = ``"asset.removeTickerAffirmationExemption"``

#### Defined in

[generated/types.ts:553](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L553)

___

### RemoveTickerPreApproval

• **RemoveTickerPreApproval** = ``"asset.removeTickerPreApproval"``

#### Defined in

[generated/types.ts:555](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L555)

___

### RenameAsset

• **RenameAsset** = ``"asset.renameAsset"``

#### Defined in

[generated/types.ts:530](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L530)

___

### ReserveClassicTicker

• **ReserveClassicTicker** = ``"asset.reserveClassicTicker"``

#### Defined in

[generated/types.ts:539](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L539)

___

### SetAssetMetadata

• **SetAssetMetadata** = ``"asset.setAssetMetadata"``

#### Defined in

[generated/types.ts:543](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L543)

___

### SetAssetMetadataDetails

• **SetAssetMetadataDetails** = ``"asset.setAssetMetadataDetails"``

#### Defined in

[generated/types.ts:544](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L544)

___

### SetFundingRound

• **SetFundingRound** = ``"asset.setFundingRound"``

#### Defined in

[generated/types.ts:536](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L536)

___

### Unfreeze

• **Unfreeze** = ``"asset.unfreeze"``

#### Defined in

[generated/types.ts:529](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L529)

___

### UnlinkTickerFromAssetId

• **UnlinkTickerFromAssetId** = ``"asset.unlinkTickerFromAssetId"``

#### Defined in

[generated/types.ts:564](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L564)

___

### UpdateAssetType

• **UpdateAssetType** = ``"asset.updateAssetType"``

#### Defined in

[generated/types.ts:549](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L549)

___

### UpdateIdentifiers

• **UpdateIdentifiers** = ``"asset.updateIdentifiers"``

#### Defined in

[generated/types.ts:537](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L537)
